# skill-repository

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/skills/supply-chain/procurement-analyzer/: skill.md
.claude/skills/supply-chain/procurement-analyzer/_archive/: README.md
.claude/skills/supply-chain/procurement-analyzer/schemas/: component_summary.schema.json  criticality_supplier_heatmap.schema.json  defect_root_cause_analysis.schema.json  price_volume_scatter.schema.json  price_volume_trend.schema.json  request_commit_actual_gap.schema.json  supplier_defect_heatmap.schema.json  supplier_price_trend.schema.json  supplier_project_component_matrix.schema.json  supplier_scorecard.schema.json  supplier_share_breakdown.schema.json  supplier_summary.schema.json
.claude/skills/supply-chain/procurement-analyzer/scripts/: commons.py  component_summary.py  criticality_supplier_heatmap.py  defect_root_cause_analysis.py  price_volume_scatter.py  price_volume_trend.py  request_commit_actual_gap.py  supplier_defect_heatmap.py  supplier_price_trend.py  supplier_project_component_matrix.py  supplier_scorecard.py  supplier_share_breakdown.py  supplier_summary.py
datasets/supply-chain/supplier-stability-dataset/: README.md  report_cases.md
datasets/supply-chain/supplier-stability-dataset/output/: report_1.md  report_2.md  report_3.md  report_4.md  report_5.md
datasets/supply-chain/supplier-stability-dataset/output/output_problem_1/: criticality_heatmap_component-Structural.json  price_volume_scatter_component-Structural.json  (+1 more)
(+11 files in other folders)
