[project]
name = "skill-repository"
version = "0.1.0"
description = "Claude agent skills, plus the code and datasets used to test them"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argparse>=1.4.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
]
